.snakemake/log/2022-08-25T150354.375779.snakemake.log
Full Traceback (most recent call last):
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/__init__.py", line 591, in snakemake
    workflow.include(
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/workflow.py", line 1173, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/home/jeszyman/repos/cfdna-frag/workflow/int_test.yaml", line 9
    @workflow.norun()
    ^
SyntaxError: invalid syntax

SyntaxError in line 8 of /home/jeszyman/repos/cfdna-frag/workflow/int_test.yaml:
invalid syntax
